--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6, .navbar {
+  margin:0;
+}
 .navbar {
   border-radius: 0;
   font-family: "Helvetica Neue", Helvetica;
@@ -5,9 +8,34 @@
   box-shadow: 0px 1px 3px #2a2a2a;
   background: url('crossed_stripes.png');
 }
-
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   color: white;
+}
+.hero {
+  background: url('hero1.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height:370px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+.frosty {
+	background: rgba(0,0,0, 0.5);
+	color: white;
+}
+.frosty h1 {
+	font-family: "Helvetica Neue", Helvetica;
+	font-weight: 100;
+	text-shadow: rgba(0,0,0, 0.95) 1px 1px;
+}
+.frosty h2 {
+	font-family: "Helvetica Neue", Helvetica;
+	font-weight: 200;
+	text-shadow: rgba(0,0,0, 0.95) 1px 1px;
+}
+.btn {
+	border-radius: 0;
 }
