--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,11 +2,11 @@
 	<br />
   <div class="frosty col-xs-10 col-xs-offset-1 text-center">
     <br />
-    <h1>Learn Magic from the Pros</h1>
+    <h1>Learn Anything From Magic to Coding</h1>
     <br />
-    <h2>I'm an illusionist, Michael.</h2>
+    <h2>Check out all of our amazing courses!</h2>
     <br />
-    <%= link_to 'Learn More', '#', class: 'btn btn-info' %>
+    <%= link_to 'See All Courses', courses_path, class: 'btn btn-info' %>
     <br /><br />
   </div>
 </div>
