--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,15 +1,15 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center"><%= @course.title %></h1>
+  <h1 class="text-center"><%= current_course.title %></h1>
   <br />
-  <%= link_to 'Preview Course As Student', course_path(@course), class: 'btn btn-warning pull-right' %>
+  <%= link_to 'Preview Course As Student', course_path(current_course), class: 'btn btn-warning pull-right' %>
   <br class="clr" />
   <div class="text-center">
-  	<%= link_to 'Add section', new_instructor_course_section_path(@course), class: 'btn btn-info btn-lg' %>
+  	<%= link_to 'Add section', new_instructor_course_section_path(current_course), class: 'btn btn-info btn-lg' %>
   </div>
 
   <ul>
-  	<% @course.sections.each do |section| %>
+  	<% current_course.sections.each do |section| %>
   	<br />
   		<li>
   			<%= section.title %>
