--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -3,4 +3,11 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= current_lesson.title %></h1>
   <p><%= current_lesson.subtitle %></p>
+  
+    <video id="MY_VIDEO_1" class="video-js vjs-big-play-centered vjs-fluid vjs-default-skin" controls
+ preload="auto" width="auto" height="auto" poster=""
+ data-setup="{}">
+   <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
+   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+ </video>
 </div>
