--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -65,3 +65,20 @@ h1, h2, h3, h4, h5, h6, .navbar {
   padding:8px;
   margin: 10px;
 }
+.lesson {
+  background-color:black;
+}
+.lesson a {
+  color:white;
+  font-family: "Helvetica Neue",Helvetica;
+  font-weight:100;
+  font-size: 15px;
+}
+.lesson a b {
+  font-weight: 100;
+  font-size:25px;
+}
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+}
