--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -82,3 +82,6 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 }
+.lessons {
+  cursor: pointer; cursor: hand; 
+}
