Issue saving section postions

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -10,6 +10,17 @@
         });
       }
     });
+    
+    $('.sections').sortable({
+      update: function( event, ui ) {
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.index() } }
+        });
+      }
+    });
    });
 </script>
 
@@ -25,10 +36,10 @@
   	<%= link_to 'Add section', new_instructor_course_section_path(current_course), class: 'btn btn-info btn-lg' %>
   </div>
 
-  <ul>
-  	<% current_course.sections.each do |section| %>
+  <ul class="sections">
+  	<% current_course.sections.rank(:row_order).each do |section| %>
   	<br />
-  		<li>
+  		<li data-update-url="<%= instructor_section_path(section) %>">
   			<%= section.title %>
   			<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-info btn-xs' %>
   			<ul class="lessons">
