--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,6 +5,9 @@ body {
 h1, h2, h3, h4, h5, h6, .navbar {
   margin:0;
 }
+ul {
+      list-style-type: none;
+}
 .navbar {
   border-radius: 0;
   font-family: "Helvetica Neue", Helvetica;
@@ -82,6 +85,6 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 }
-.lessons {
+.lessons, .sections {
   cursor: pointer; cursor: hand; 
 }
