--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -22,6 +22,7 @@
       }
     });
    });
+   
 </script>
 
 <br />
@@ -33,7 +34,10 @@
   <%= link_to 'Preview Course As Student', course_path(current_course), class: 'btn btn-warning pull-right' %>
   <br class="clr" />
   <div class="text-center">
-  	<%= link_to 'Add section', new_instructor_course_section_path(current_course), class: 'btn btn-info btn-lg' %>
+  	<!-- Button trigger modal -->
+    <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#newSectionModal">
+      Add new section
+    </button>
   </div>
 
   <ul class="sections">
@@ -71,4 +75,26 @@
   	<% end %>
   </ul>
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="newSectionModalLabel">Add a new section</h4>
+      </div>
+      <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
+        <div class="modal-body">
+            <%= f.input :title %>
+            <br />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add section", class: 'btn btn-info' %>
+        </div>
+      <% end %>
+      </div>
+  </div>
 </div>
