--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,10 @@
 <script>
   $(function() {
+    $('.new-lesson-button').click(function(event) {
+      var lessonUrl = $(event.target).data('lesson-url');
+      $('#newLessonForm').attr('action', lessonUrl);
+    });
+    
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -29,7 +34,9 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
   <br />
-  <%= image_tag current_course.image, class: 'img-responsive' %>
+  <div class="center">
+  <%= image_tag current_course.image, class: 'img-responsive center-block' %>
+  </div>
   <br />
   <%= link_to 'Preview Course As Student', course_path(current_course), class: 'btn btn-warning pull-right' %>
   <br class="clr" />
@@ -48,9 +55,14 @@
     		  <span class="glyphicon glyphicon-list"></span>
     			<%= section.title %>
     		</div>
-  			<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-info btn-xs' %>
+    		<!-- Button trigger modal -->
+        <button class="btn btn-primary btn-lg pull-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+          New Lesson
+        </button>
+  		
   			<br class="clr" />
         <br class="clr" />
+        
   			<ul class="lessons">
   				<% section.lessons.rank(:row_order).each do |lesson| %>
   					<li data-update-url="<%= instructor_lesson_path(lesson) %>">
@@ -77,7 +89,7 @@
 
 </div>
 
-<!-- Modal -->
+<!-- Section Modal -->
 <div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -96,5 +108,28 @@
         </div>
       <% end %>
       </div>
+  </div>
+</div>
+
+<!-- Lesson Modal -->
+<div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="newLessonModal">Add a new lesson</h4>
+      </div>
+      <%= simple_form_for @lesson, url: "#", html: {id: 'newLessonForm'} do |f| %>
+        <div class="modal-body">
+          	<%= f.input :title %>
+          	<%= f.input :subtitle %>
+          	<%= f.input :video %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add Lesson", class: 'btn btn-info' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
