--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -20,8 +20,35 @@ html, body {
   font-family: "Helvetica Neue",Helvetica;
   padding:10px 0px;
   margin-top:30px;
+  font-weight: 100;
 }
 #footer a {
 	color: white;
 	font-weight:100;
+}
+.social-button {
+  width: 32px;
+  background-color: white;
+  border-radius: 6px;
+  margin: 4px;
+}
+.social a:hover {
+  text-decoration:none;
+}
+$footer-height-mobile: 300px;
+@media (max-width: 750px) {
+  #footer {
+    height:$footer-height-mobile;
+  }
+
+  #wrap {
+    margin: 0 auto -$footer-height-mobile;
+    /* Pad bottom by footer height */
+    padding: 0 0 $footer-height-mobile;
+  }
+  
+  #footer .social {
+    margin-top:10px;
+  }
+
 }
