--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,13 +53,41 @@
 
 	<br class="clr" />
 <!-- footer -->
-	<div id="footer">
-	    <div class="container">
-	      <b>Teachers</b>
-	      <br />
-	      <%= link_to 'Teach a Course', new_instructor_course_path %>
-	    </div>
-  	</div>
+  <div id="footer">
+    <div class="container">
+      <div class="col-xs-12 col-sm-3 text-center">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-xs-12 col-sm-3 text-center">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3 text-center">
+        <b>Contact</b>
+        <br />
+        me@michaelkulinski.com
+      </div>
+      <div class="col-xs-12 col-sm-3 social text-center">
+        <b>Social</b>
+        <br />
+        <br />
+        <%= link_to 'http://github.com/mkulinski' do %>
+          <%= image_tag 'github.png', class: 'social-button' %>
+        <% end %>
+        <%= image_tag 'instagram.png', class: 'social-button' %>
+        <%= image_tag 'twitter.png', class: 'social-button' %>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
