--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,9 @@
       <div class="col-xs-12 col-sm-3 text-center">
         <b>Contact</b>
         <br />
-        me@michaelkulinski.com
+        <%= link_to 'mailto: me@michaelkulinski.com' do %>
+          me@michaelkulinski.com
+        <% end %>
       </div>
       <div class="col-xs-12 col-sm-3 social text-center">
         <b>Social</b>
@@ -83,8 +85,12 @@
         <%= link_to 'http://github.com/mkulinski' do %>
           <%= image_tag 'github.png', class: 'social-button' %>
         <% end %>
+        <%= link_to 'http://instagram.com/mkulinski' do %>
         <%= image_tag 'instagram.png', class: 'social-button' %>
+        <% end %>
+        <%= link_to 'http://twitter.com/mkulinski' do %>
         <%= image_tag 'twitter.png', class: 'social-button' %>
+        <% end %>
       </div>
     </div>
   </div>
