--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,12 +7,12 @@
  	<% @courses.each do |course| %>
  		<h2 class="text-center"><%= link_to course.title, course_path(course) %></h2>
  		<br />
- 		<%= image_tag course.image, class: 'img-responsive' %>
+ 		<%= image_tag course.image, class: 'img-responsive center-block' %>
  		<br />
- 		<div class="col-sm-8 col-xs-12">
+ 		<div class="col-sm-6 col-xs-12 text-center">
       <%= course.description %>
     </div>
-    <div class="col-sm-4 col-xs-12 text-center">
+    <div class="col-sm-6 col-xs-12 text-center">
       <%= link_to 'More Details', course_path(course), class: 'btn btn-primary btn-large' %>
     </div>
     <br class="clr" />
